# sql_agent

./: .gitignore  docker-compose.yml  init.sql
chatbot/: Dockerfile  chatbot.py  lang_model.py  requirements.txt  test.ipynb  test.py
database/: Dockerfile  click_data.csv  pyproject.toml  requirements.txt  script.py
database/data/: purchase_data.csv
